# llm-candidate-rag-langchain

./: .env.example  .gitignore  README.md  pyproject.toml
data/finetune_exports/: instruct_generic.jsonl  openai_chat.jsonl
data/input/: CVJeronimoGarcia.json  Gorosito.json  Jan Claudiu Crisan CV EN.json  MauroGioberti_ATS.json
data/instructions/: embedings.jsonl  llm.jsonl
data/prompts/: chat_human.txt  chat_system.txt
prompts/: filter_by_language.txt  rank_candidates.txt  verify_experience.txt
schema/: ai_resume_result.schema.json
src/: app.py
src/api/: main.py
src/chat/: agent.py  tools.py
src/core/: domain.py  embedding_client.py  prompting.py  retriever.py
src/core/application/: agent.py  embedding_client.py  prompting.py  retriever.py
src/core/domain/: candidate.py
src/core/infrastructure/: embeddings.py  llm.py
src/infra/: embeddings.py  llm.py
src/ingest/: build_index.py  prepare_llm_dataset.py
src/scripts/: prepare_llm_dataset copy.py  prepare_llm_dataset.py
tests/: test_chat_hr.py  test_ingest.py  test_llm_dataset.py  test_llm_instructions_ingest.py
